<resources>
    <string name="app_name">Wardrobe</string>
    <string name="title_home">Home</string>
    <string name="title_closet">Closet</string>
    <string name="title_community">Community</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_closet_fragment">Hello closet fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>

    <string name="title_add_clothes">Add Clothes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_setting_fragment">setting</string>
    <string name="add_select_type">Type</string>
    <string name="add_select_seasons">Season</string>


    <string name="season_spring">Spring</string>
    <string name="season_summer">Summer</string>
    <string name="season_autumn">Autumn</string>
    <string name="season_winter">Winter</string>
    <string name="add_select_color">Color</string>
    <string name="add_button_choose_color">Choose</string>
    <string name="add_input_name">Name</string>
    <string name="add_input_store_location">Store Location</string>
    <string name="add_input_brand">Brand</string>
    <string name="add_input_price">Price</string>
    <string name="actionbar_done">Done</string>

    <string name="add_choose_camera">Camera</string>
    <string name="add_choose_gallery">Gallery</string>
    <string name="settings_login">Login</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_help">Help</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_Password">Password</string>

    <string name="toast_invalid_user">Invalid Email or Password!</string>
    <string name="settings_sign_up">Sign Up</string>
    <string name="login_hint_username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old Password</string>
    <string name="settings_about">About</string>
    <string name="options">Options</string>
    <string name="closet_select_by_type">Select by type</string>
    <string name="closet_select_by_color">Select by color</string>
    <string name="closet_select_by_season">Select by season</string>
    <string name="community_following">Following</string>
    <string name="community_my_post">My Post</string>
    <string name="community_search_users">Search Users</string>
    <string name="new_post_hint">New Post</string>
    <string name="new_post_button">Post</string>
    <string name="title_new_post">New Post</string>
    <string name="follow">Follow</string>
    <string name="dialog_new_type_title">New Type</string>
    <string name="dialog_rename_type_title">New Name</string>
    <string name="delete">Delete</string>
    <string name="closet_select_all_type">Show all types</string>
    <string name="title_modify_clothes">Modify Clothes</string>
    <string name="try_these_today">Try These Today!</string>
    <string name="please_login_at_setting_page">Please Login at Setting Page</string>
    <string name="empty">Empty</string>
    <string name="community_refresh">Refresh</string>
    <string name="send">Send</string>


</resources>
