<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/community_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:id="@+id/community_option_refresh"
        app:showAsAction="always"/>


    <item
        android:title="@string/community_following"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:id="@+id/community_option_following"
        app:showAsAction="always"/>


    <item android:title="@string/community_my_post"
        android:icon="@drawable/ic_local_post_office_black_24dp"
        android:id="@+id/community_option_my_post"
        app:showAsAction="always"/>
    <item android:title="@string/community_search_users"
        android:icon="@drawable/ic_search_black_24dp"
        android:id="@+id/community_option_search"
        app:showAsAction="always"/>

</menu>