<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClothesActivity"
    android:fillViewport="true"
    android:layout_weight="0.96">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="28dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/input_add_picture"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:src="@drawable/ic_add_a_photo_primary_24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9e9e9e"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="28dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <EditText android:id="@+id/input_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/add_input_name" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/input_add_type"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/add_select_type"
                android:paddingLeft="4dp"
                android:layout_alignParentLeft="true"
                android:layout_weight="4"
                android:textSize="14dp"
                android:textColor="@color/colorAccent"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/input_add_type"
                android:layout_alignParentRight="true"
                android:id="@+id/input_add_type_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/input_add_season"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/add_select_seasons"
                android:paddingLeft="4dp"
                android:layout_alignParentLeft="true"
                android:layout_weight="2"
                android:textSize="14dp"
                android:textColor="@color/colorAccent"
                />


            <CheckBox
                android:id="@+id/Spring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_spring"
                android:textColor="@color/colorAccent"
                />
            <CheckBox
                android:id="@+id/Summer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_summer"
                android:textColor="@color/colorAccent"
                />
            <CheckBox
                android:id="@+id/Autumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_autumn"
                android:textColor="@color/colorAccent"
                />
            <CheckBox
                android:id="@+id/Winter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season_winter"
                android:textColor="@color/colorAccent"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/input_add_color"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/add_select_color"
                android:paddingStart="4dp"
                android:layout_weight="4"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/input_color_selected"
                android:background="@color/colorPrimary"
                android:layout_marginRight="10dp">
            </View>

            <android.support.design.button.MaterialButton
                android:id="@+id/button_choose_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button_choose_color"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_add_store_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/add_input_store_location" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_add_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/add_input_brand" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_add_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/add_input_price" />
        </android.support.design.widget.TextInputLayout>





    </LinearLayout>



</ScrollView>