<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_login"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_login"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/dialog_login_email"
        />

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_Password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/dialog_login_password"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <android.support.design.button.MaterialButton
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_login_button"
            android:text="@string/settings_login"
            android:layout_weight="1"
            android:background="@color/colorAccent"/>

        <android.support.design.button.MaterialButton
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_sign_up_button"
            android:text="@string/settings_sign_up"
            android:layout_weight="1"
            android:background="@color/colorAccent"/>


    </LinearLayout>


</LinearLayout>