<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment"
    android:orientation="vertical"
    android:paddingTop="28dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:id="@+id/settings_login">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_user_avatar"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_login"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/settings_login_text"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9e9e9e"
        android:layout_marginVertical="28dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:id="@+id/settings_feedback"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_feedback_black_24dp"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_feedback"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9e9e9e"
        android:layout_marginVertical="28dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:id="@+id/settings_help"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_help_black_24dp"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_help"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9e9e9e"
        android:layout_marginVertical="28dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:id="@+id/settings_about"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_sentiment_satisfied_black_24dp"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings_about"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9e9e9e"
        android:layout_marginVertical="28dp"/>






</LinearLayout>